devops/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled # Включаем инжект сайдкаров Istio для неймспейса
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32080
      targetPort: 8080
      name: "http"  # Istio требует явного указания протокола при определенных настройках
  selector:
    app: hello-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hello-app
      version: v1
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      containers:
        - name: hello-app
          image: duyuli/otus_architect:task4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: my-app-config-v1
            items:
              - key: application.properties
                path: application.properties
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v2
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hello-app
      version: v2
  template:
    metadata:
      labels:
        app: hello-app
        version: v2
    spec:
      containers:
        - name: hello-app
          image: duyuli/otus_architect:task4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: my-app-config-v2
            items:
              - key: application.properties
                path: application.properties
