devops/app/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-app-vs
spec:
  hosts:
  - "*"
  gateways:
  - hello-app-gateway
  http:
  - route:
    - destination:
        host: hello-app
        subset: v1
      weight: 50
    - destination:
        host: hello-app
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello-app
spec:
  host: hello-app
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
